# rust-usb-io

./: Cargo.toml  README.md
docs/: LINKS.md
usb-io/: Cargo.toml
usb-io-host/: Cargo.toml
usb-io-host/src/: main.rs
usb-io-target/: Cargo.toml  build.rs
usb-io-target/src/: main.rs
usb-io/src/: class.rs  host.rs  lib.rs  memory_interface.rs  message.rs  usb.rs
usb-io/src/host/: connection.rs  device.rs
