[package]
name = "usb-io-target"
version = "0.1.0"
edition = "2021"
authors = ["no111u3"]

[dependencies.stm32f4xx-hal]
version = "=0.13.2"
features = ["rt", "stm32f401", "usb_fs", "rtic"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = "0.2"
stm32-usbd = "0.6"
systick-monotonic = "1.0"
rtic-monotonic = "1.0"
usb-device = "0.2"
usb-io = { version = "0.1", path = "../usb-io", default-features = false }
panic-halt = "0.2"
stm32-device-signature = { version = "0.3.0", features = ["stm32f4"] }